--- a/Todo-list/Properties/launchSettings.json
+++ b/Todo-list/Properties/launchSettings.json
@@ -3,16 +3,16 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:48882",
-      "sslPort": 44354
+      "applicationUrl": "http://localhost:7122",
+      "sslPort": 44397
     }
   },
   "profiles": {
-    "Todo": {
+    "Todo_list": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7245;http://localhost:5043",
+      "applicationUrl": "https://localhost:7127;http://localhost:5243",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
